<resources>
    <string name="app_name">tutorial5</string>
    <string name="tvTitle">Register Student</string>
    <string name="edtStudentID">Enter student ID</string>
    <string name="tvYear">Select Academic Year</string>
    <string name="tvSemester">Select the semester</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnCancle">Cancel</string>
    <string name="cdAgreement">I agree terms and conditions</string>

    <string-array name="years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="semesters">
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>
</resources>